tests/fails/union.rs
use new_macro::new;

#[derive(new)]
union Dumby2{
	a:u8,
	b:u16
}